5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4153/executions/1758_1189.log
== TEST (2019-05-28 11:02:37) 
-- CODE:
from numpy import *

v = input("Insira uma string nigga: ")

msg = replace(v)
print(msg)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:15:33) 
-- CODE:
from numpy import *

v = input("Insira uma string nigga: ")

msg = v.replace(" ","")
print(msg)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:21:15) 
-- CODE:
from numpy import *

v = input("Insira uma string nigga: ")

msg = v.replace(" ","")
print(msg.upper)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:21:32) 
-- CODE:
from numpy import *

v = input("Insira uma string nigga: ")

msg = v.replace(" ","")
print(msg.upper())

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:23:29) 
-- CODE:
from numpy import *

v = input("Insira uma string nigga: ")

msg = v.replace(" ","")
print(msg.upper())
v2 = zeros(size(v))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:25:46) 
-- CODE:
from numpy import *

v = input("Insira uma string nigga: ")

msg = v.replace(" ","")
print(msg.upper())
v2 = zeros(size(v))
i = 0
a = 0
b = 0
while(i < size(v)):
	v2[a] = v[b]
	a = a + 1
	i = i + 1
	b = b - 1
	print(v2)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:27:46) 
-- CODE:
from numpy import *

v = input("Insira uma string nigga: ")

msg = v.replace(" ","")
print(msg.upper())


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:30:56) 
-- CODE:
from numpy import *

v = input("Insira uma string nigga: ")

msg = v.replace(" ","")
print(msg.upper())
x = size(v)
if(v == v(-1:-x-1)):
	print(1)
else:
	print0
-- ERROR:
File "XXXX", line 8
    if(v == v(-1:-x-1)):
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:31:07) 
-- CODE:
from numpy import *

v = input("Insira uma string nigga: ")

msg = v.replace(" ","")
print(msg.upper())
x = size(v)
if(v == v(-1:-x)):
	print(1)
else:
	print0
-- ERROR:
File "XXXX", line 8
    if(v == v(-1:-x)):
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 12:15:08) 
-- CODE:
from numpy import *

v = input("Insira uma string nigga: ")

msg = v.replace(" ","")
print(msg.upper())

v1 = v[-1:]
print(v1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 12:15:51) 
-- CODE:
from numpy import *

v = input("Insira uma string nigga: ")

msg = v.replace(" ","")
print(msg.upper())
x = len(v)-1

v1 = v[-1:-x]
print(v1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 12:15:55) 
-- CODE:
from numpy import *

v = input("Insira uma string nigga: ")

msg = v.replace(" ","")
print(msg.upper())
x = len(v)-1

v1 = v[-1:-x]
print(v1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 12:16:10) 
-- CODE:
from numpy import *

v = input("Insira uma string nigga: ")

msg = v.replace(" ","")
print(msg.upper())
x = len(v)-1

print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 12:20:17) 
-- CODE:
from numpy import *

v = input("Insira uma string nigga: ")

msg = v.replace(" ","")
print(msg.upper())
# Quantidade de caracteres
x = len(v)
# Converter numero em string
y = int(v)
print(y)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 12:38:44) 
-- CODE:
from numpy import *

v = input("Insira uma string nigga: ")

msg = v.replace(" ","")
print(msg.upper())
i = 0
v2 = zeros(len(V))
print(v2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 12:39:02) 
-- CODE:
from numpy import *

v = input("Insira uma string nigga: ")

msg = v.replace(" ","")
print(msg.upper())
i = 0
v2 = zeros(len(v))
print(v2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 12:41:02) 
-- CODE:
from numpy import *

v = input("Insira uma string nigga: ")

msg = v.replace(" ","")
print(msg.upper())
i = 0
k = -1
v2 = zeros(len(v))
while(i < len(v)):
	v2[i] = v[k]
	k = k -1
	i = i + 1
print(v2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 12:41:47) 
-- CODE:
from numpy import *

v = input("Insira uma string nigga: ")

msg = v.replace(" ","")
print(msg.upper())
i = 0
k = -1
v2 = str(zeros(len(v)))
while(i < len(v)):
	v2[i] = v[k]
	k = k - 1
	i = i + 1
print(v2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 12:42:24) 
-- CODE:
from numpy import *

v = input("Insira uma string nigga: ")

msg = v.replace(" ","")
print(msg.upper())
i = 0
k = -1
v2 = zeros(len(v), dtype=str)
while(i < len(v)):
	v2[i] = v[k]
	k = k - 1
	i = i + 1
print(v2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 12:45:49) 
-- CODE:
from numpy import *

v = input("Insira uma string nigga: ")

msg = v.replace(" ","")
print(msg.upper())
x = len(v.replace(" ",""))
i = 0
k = -1
a =0
v2 = zeros(x, dtype=str)
while(i < len(v)):
	if(v[i] != " "):
		v2[i] = v[k]
		a = a + 1
	k = k - 1
	i = i + 1
print(v2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 12:46:05) 
-- CODE:
from numpy import *

v = input("Insira uma string nigga: ")

msg = v.replace(" ","")
print(msg.upper())
x = len(v.replace(" ",""))
i = 0
k = -1
a =0
v2 = zeros(x, dtype=str)
while(i < len(v)):
	if(v[i] != " "):
		v2[a] = v[k]
		a = a + 1
	k = k - 1
	i = i + 1
print(v2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 12:46:55) 
-- CODE:
from numpy import *

v = input("Insira uma string nigga: ")

msg = v.replace(" ","")
print(msg.upper())
x = len(v.replace(" ",""))
i = 0
k = -1
a =0
v2 = zeros(x, dtype=str)
while(i < len(v)):
	if(v[i] != " "):
		v2[a] = v[k]
		v2 = v2 + v2[a]
		a = a + 1
	k = k - 1
	i = i + 1
print(v2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 12:48:43) 
-- CODE:
from numpy import *

v = input("Insira uma string nigga: ")

msg = v.replace(" ","")
print(msg.upper())
x = len(v.replace(" ",""))
i = 0
k = 0
a = -1
v2 = zeros(x, dtype=str)
while(i < len(v)):
	if(v[i] != " "):
		v2[k] = v[a]
		k = k + 1
	i = i + 1
	a = a - 1
print(v2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 12:48:53) 
-- CODE:
from numpy import *

v = input("Insira uma string nigga: ")

msg = v.replace(" ","")
print(msg.upper())
x = len(v.replace(" ",""))
i = 0
k = 0
a = -1
v2 = zeros(x, dtype=str)
while(i < len(v)):
	if(v[i] != " "):
		v2[k] = v[a]
		k = k + 1
	i = i + 1
	a = a - 1
print(v2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 12:49:07) 
-- CODE:
from numpy import *

v = input("Insira uma string nigga: ")

msg = v.replace(" ","")
print(msg.upper())
x = len(v.replace(" ",""))
i = 0
k = 0
a = -1
v2 = zeros(x, dtype=str)
while(i < len(v)):
	if(v[i] != " "):
		v2[k] = v[a]
		k = k + 1
	i = i + 1
	a = a - 1
print(v2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 12:49:56) 
-- CODE:
from numpy import *

v = input("Insira uma string nigga: ")

msg = v.replace(" ","")
print(msg.upper())
x = len(v.replace(" ",""))
i = 0
k = 0
a = -1
v2 = zeros(x, dtype=str)
while(i < len(v)):
	if(v[a] != " "):
		v2[k] = v[a]
		k = k + 1
	a = a - 1
	i = i + 1
print(v2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 12:50:01) 
-- CODE:
from numpy import *

v = input("Insira uma string nigga: ")

msg = v.replace(" ","")
print(msg.upper())
x = len(v.replace(" ",""))
i = 0
k = 0
a = -1
v2 = zeros(x, dtype=str)
while(i < len(v)):
	if(v[a] != " "):
		v2[k] = v[a]
		k = k + 1
	a = a - 1
	i = i + 1
print(v2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 12:50:55) 
-- CODE:
from numpy import *

v = input("Insira uma string nigga: ")

msg = v.replace(" ","")
print(msg.upper())
x = len(v.replace(" ",""))
i = 0
k = 0
a = -1
v2 = zeros(x, dtype=str)
while(i < len(v)):
	if(v[a] != " "):
		v2[k] = v[a]
		v2 = v2 + v2[k]
		k = k + 1
	a = a - 1
	i = i + 1
print(v2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 12:51:28) 
-- CODE:
from numpy import *

v = input("Insira uma string nigga: ")

msg = v.replace(" ","")
print(msg.upper())
x = len(v.replace(" ",""))
i = 0
k = 0
a = -1
v2 = zeros(x, dtype=str)
while(i < len(v)):
	if(v[a] != " "):
		v2[k] = v[a]
		v2 = v2 + v2[k]
		k = k + 1
	a = a - 1
	i = i + 1
print(v2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 12:52:06) 
-- CODE:
from numpy import *

v = input("Insira uma string nigga: ")

msg = v.replace(" ","")
print(msg.upper())
x = len(v.replace(" ",""))
i = 0
k = 0
a = -1
v2 = zeros(x, dtype=str)
while(i < len(v)):
	if(v[a] != " "):
		v2[k] = v[a]
		k = k + 1
	a = a - 1
	i = i + 1
print(v2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 12:54:04) 
-- CODE:
from numpy import *

v = input("Insira uma string nigga: ")

msg = v.replace(" ","")
print(msg.upper())
x = len(v.replace(" ",""))
i = 0
k = 0
a = -1
msg = ""
v2 = zeros(x, dtype=str)
while(i < len(v)):
	if(v[a] != " "):
		v2[k] = v[a]
		msg = msg + v2[k]
		k = k + 1
	a = a - 1
	i = i + 1
print(v2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 12:54:17) 
-- CODE:
from numpy import *

v = input("Insira uma string nigga: ")

msg = v.replace(" ","")
print(msg.upper())
x = len(v.replace(" ",""))
i = 0
k = 0
a = -1
msg = ""
v2 = zeros(x, dtype=str)
while(i < len(v)):
	if(v[a] != " "):
		v2[k] = v[a]
		msg = msg + v2[k]
		k = k + 1
	a = a - 1
	i = i + 1
print(msg)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 12:55:36) 
-- CODE:
from numpy import *

v = input("Insira uma string nigga: ")

msg = v.replace(" ","")
print(msg.upper())
x = len(v.replace(" ",""))
i = 0
k = 0
a = -1
msg2 = ""
v2 = zeros(x, dtype=str)
while(i < len(v)):
	if(v[a] != " "):
		v2[k] = v[a]
		msg2 = msg2 + v2[k]
		k = k + 1
	a = a - 1
	i = i + 1
if(msg2 == v):
	h = 1
else:
	h = 0
print(h)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 12:56:00) 
-- CODE:
from numpy import *

v = input("Insira uma string nigga: ")

msg = v.replace(" ","")
print(msg.upper())
x = len(v.replace(" ",""))
i = 0
k = 0
a = -1
msg2 = ""
v2 = zeros(x, dtype=str)
while(i < len(v)):
	if(v[a] != " "):
		v2[k] = v[a]
		msg2 = msg2 + v2[k]
		k = k + 1
	a = a - 1
	i = i + 1
if(msg2 == v):
	h = 1
else:
	h = 0
print(msg2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 12:56:04) 
-- CODE:
from numpy import *

v = input("Insira uma string nigga: ")

msg = v.replace(" ","")
print(msg.upper())
x = len(v.replace(" ",""))
i = 0
k = 0
a = -1
msg2 = ""
v2 = zeros(x, dtype=str)
while(i < len(v)):
	if(v[a] != " "):
		v2[k] = v[a]
		msg2 = msg2 + v2[k]
		k = k + 1
	a = a - 1
	i = i + 1
if(msg2 == v):
	h = 1
else:
	h = 0
print(msg2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 12:57:05) 
-- CODE:
from numpy import *

v = input("Insira uma string nigga: ")

msg = v.replace(" ","")
print(msg.upper())
x = len(v.replace(" ",""))
i = 0
k = 0
a = -1
msg2 = ""
v2 = zeros(x, dtype=str)
while(i < len(v)):
	if(v[a] != " "):
		v2[k] = v[a]
		msg2 = msg2 + v2[k]
		k = k + 1
	a = a - 1
	i = i + 1
if(msg2 == (v.replace(" ",""))):
	h = 1
else:
	h = 0
print(msg2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 12:57:11) 
-- CODE:
from numpy import *

v = input("Insira uma string nigga: ")

msg = v.replace(" ","")
print(msg.upper())
x = len(v.replace(" ",""))
i = 0
k = 0
a = -1
msg2 = ""
v2 = zeros(x, dtype=str)
while(i < len(v)):
	if(v[a] != " "):
		v2[k] = v[a]
		msg2 = msg2 + v2[k]
		k = k + 1
	a = a - 1
	i = i + 1
if(msg2 == (v.replace(" ",""))):
	h = 1
else:
	h = 0
print(msg2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 12:57:33) 
-- CODE:
from numpy import *

v = input("Insira uma string nigga: ")

msg = v.replace(" ","")
print(msg.upper())
x = len(v.replace(" ",""))
i = 0
k = 0
a = -1
msg2 = ""
v2 = zeros(x, dtype=str)
while(i < len(v)):
	if(v[a] != " "):
		v2[k] = v[a]
		msg2 = msg2 + v2[k]
		k = k + 1
	a = a - 1
	i = i + 1
if(msg2 == (v.replace(" ",""))):
	h = 1
else:
	h = 0
print(msg2)
print(h)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 12:57:41) 
-- CODE:
from numpy import *

v = input("Insira uma string nigga: ")

msg = v.replace(" ","")
print(msg.upper())
x = len(v.replace(" ",""))
i = 0
k = 0
a = -1
msg2 = ""
v2 = zeros(x, dtype=str)
while(i < len(v)):
	if(v[a] != " "):
		v2[k] = v[a]
		msg2 = msg2 + v2[k]
		k = k + 1
	a = a - 1
	i = i + 1
if(msg2 == (v.replace(" ",""))):
	h = 1
else:
	h = 0
print(msg2)
print(h)
-- EXECUTION TIME:
0.578374
-- TEST CASE 1:
---- input:
ACARARAJADADAJARARACA
---- correct output:
ACARARAJADADAJARARACA
1
---- user output:
ACARARAJADADAJARARACA
ACARARAJADADAJARARACA
1
-- TEST CASE 2:
---- input:
CACHORRO
---- correct output:
CACHORRO
0
---- user output:
CACHORRO
ORROHCAC
0
-- TEST CASE 3:
---- input:
amalanadanalama
---- correct output:
AMALANADANALAMA
1
---- user output:
AMALANADANALAMA
amalanadanalama
1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 12:57:48) 
-- CODE:
from numpy import *

v = input("Insira uma string nigga: ")

msg = v.replace(" ","")
print(msg.upper())
x = len(v.replace(" ",""))
i = 0
k = 0
a = -1
msg2 = ""
v2 = zeros(x, dtype=str)
while(i < len(v)):
	if(v[a] != " "):
		v2[k] = v[a]
		msg2 = msg2 + v2[k]
		k = k + 1
	a = a - 1
	i = i + 1
if(msg2 == (v.replace(" ",""))):
	h = 1
else:
	h = 0
print(h)
-- EXECUTION TIME:
0.362875
-- TEST CASE 1:
---- input:
ACARARAJADADAJARARACA
---- correct output:
ACARARAJADADAJARARACA
1
---- user output:
ACARARAJADADAJARARACA
1
-- TEST CASE 2:
---- input:
CACHORRO
---- correct output:
CACHORRO
0
---- user output:
CACHORRO
0
-- TEST CASE 3:
---- input:
amalanadanalama
---- correct output:
AMALANADANALAMA
1
---- user output:
AMALANADANALAMA
1
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
